# CameraController

./: CMakeLists.txt
demo/: Info.plist  capture_test.cpp
include/: camera_capture.h
platform/macos/: macos.cmake
src/: CMakeLists.txt  avfoundation_mac.h  avfoundation_mac.mm  camera_capture.cpp
src/avfoundation_mac/: avfoundation_mac.h  avfoundation_mac.mm
utils/: utils.cmake
