cmake_minimum_required (VERSION 3.12)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

project(bd_camera_capture)

include(utils/utils.cmake)

add_subdirectory(src)
# if (CMAKE_SYSTEM_NAME MATCHES "Linux")
#     message(STATUS "current platform: Linux ")
#     include(platforms/linux/linux.cmake)
# elseif (CMAKE_SYSTEM_NAME MATCHES "Windows")
#     message(STATUS "current platform: Windows")
#     include(jna/jna.cmake)
#     include(platforms/windows/windows.cmake)
# elseif (CMAKE_SYSTEM_NAME MATCHES "FreeBSD")
#     message(STATUS "current platform: FreeBSD")
# elseif (CMAKE_SYSTEM_NAME MATCHES "Android")
#     message(STATUS "current platform: Android")
#     include(platforms/android/android.cmake)
# elseif (CMAKE_SYSTEM_NAME MATCHES "Darwin")
#     message(STATUS "current platform: Darwin")
#     include(platform/macos/macos.cmake)
# else ()
#     message(STATUS "other platform: ${CMAKE_SYSTEM_NAME}")
# endif (CMAKE_SYSTEM_NAME MATCHES "Linux")